--- a/bootstrapper.yml
+++ b/bootstrapper.yml
@@ -4,7 +4,7 @@ bootstrapper-version: 1.0.0
 typedb-version: 2.26.6
 
 # Datasets to pre-install
-dataset-root: https://raw.githubusercontent.com/vaticle/typedb-sample-data/master/bootstrapper.yml
+dataset-root: https://raw.githubusercontent.com/vaticle/typedb-sample-data/master/datasets/
 datasets:
   # The key will be used as database name. Schema & data file paths are relative to dataset-root
   bookstore:
