--- a/.factory/automation.yml
+++ b/.factory/automation.yml
@@ -3,7 +3,7 @@ build:
     test-sample-bootstrapper:
       filter:
         owner: vaticle
-        branch: [master, initial]
+        branch: master
       image: vaticle-ubuntu-22.04
       type: foreground
       command: |
