Social network dataset (#12)
This PR adds the social network dataset, in addition to making a number
of miscellaneous changes:
- Makes minor changes to the bookstore dataset.
- Bazelises the repository.
- Bumps the TypeDB version.
- Updates the repository owner for Factory CI.

---------

Co-authored-by: Ganeshwara Hananda <ganesh@typedb.com>

--- a/bootstrapper.yml
+++ b/bootstrapper.yml
@@ -8,5 +8,8 @@ dataset-root: https://raw.githubusercontent.com/vaticle/typedb-sample-data/maste
 datasets:
   # The key will be used as database name. Schema & data file paths are relative to dataset-root
   bookstore:
-    schema: bookstore-schema.tql
-    data: bookstore-data.tql
+    schema: bookstore/schema.tql
+    data: bookstore/data.tql
+  social-network:
+    schema: social-network/schema.tql
+    data: social-network/data.tql
